--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,25 @@
     <title>Web optimized Video Documentary</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <script>
+      let spreadSheetPaths = {
+        main: "https://storage.googleapis.com/sheet-parser/47e6295fd2f72284d0da2cba6bb74028-dyrefacts-facts.json",
+        css: "https://storage.googleapis.com/sheet-parser/47e6295fd2f72284d0da2cba6bb74028-dyrefacts-css.json",
+        properties: "https://storage.googleapis.com/sheet-parser/47e6295fd2f72284d0da2cba6bb74028-dyrefacts-properties.json"
+      },
+      loadedScripts = document.getElementsByTagName('script'),
+      config = {
+        spreadSheetPaths,
+        elm: loadedScripts[loadedScripts.length - 1]
+      };
+
+      if (typeof window.insertVideoStory === 'function') {
+        window.insertVideoStory(config);
+      }
+      else {
+        window.pendingVideoStory = window.pendingVideoStory || [];        
+        window.pendingVideoStory = [...window.pendingVideoStory, config];
+      }
+    </script>
   </body>
 </html>
