--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Web optimized Video Documentary</title>
   </head>
-  <body>
+  <body data-admin="true">
     <script>
       let spreadSheetPaths = {
         main: "https://storage.googleapis.com/sheet-parser/47e6295fd2f72284d0da2cba6bb74028-dyrefacts-facts.json",
